--- a/create_docker_container.yml
+++ b/create_docker_container.yml
@@ -17,4 +17,4 @@
       shell: "docker image rm -f vijayranavat/mavenproject"
     - 
       name: "create docker image"
-      shell: "docker run -d --name webmagic_demo -p 8090:8080 vijayranavat/mavenproject"
+      shell: "docker run -d --name mavenproject -p 8090:8080 vijayranavat/mavenproject"
